Made changes to naming convention

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,4 @@
   </li>
 </ul> -->
 
-<ngxTagsInput [label]="'Enter Tags'" [placeholder]="'Type Email and hit enter'" [required]=true (output)="getTags($event)"></ngxTagsInput>
+<ngxMultiTagsInput [label]="'Enter Tags'" [placeholder]="'Type Email and hit enter'" [required]=true (output)="getTags($event)"></ngxMultiTagsInput>
